--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
-/.nyc_output
-/benches/node_modules
-/coverage
-/examples/random-in-node/node_modules
-/examples/react-app/dist
-/examples/react-app/node_modules
-/lib
-/node_modules
-/target
-/tests/browser
-/types
-/tiny-secp256k1-asmjs
+node_modules/
+lib/
+dist/
+*.log
+coverage/
+.nyc_output/
+.DS_Store
+.env
+.vscode/
