--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
-    "module": "NodeNext",
+    "target": "ES2020",
+    "module": "commonjs",
     "declaration": true,
     "outDir": "./lib",
-    "baseUrl": "./src_ts",
-    "allowSyntheticDefaultImports": true,
+    "strict": true,
     "esModuleInterop": true,
-    "moduleResolution": "NodeNext"
-  }
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "rootDir": "./src_ts"
+  },
+  "include": ["src_ts/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
