nambahin src_ts

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Junkcoin secp256k1 bindings",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
+  
   "files": [
-    "lib"
+    "lib",
+    "src_ts"
   ],
   "scripts": {
     "build": "tsc",
