--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Junkcoin secp256k1 bindings",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
-  
   "files": [
     "lib",
     "src_ts"
@@ -16,7 +15,8 @@
     "format": "prettier --write src_ts/**/*.ts"
   },
   "dependencies": {
-    "@noble/hashes": "1.3.3"
+    "@noble/hashes": "1.3.3",
+    "base64-arraybuffer": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
@@ -24,7 +24,7 @@
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.0.0",
     "prettier": "^2.8.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.9.5"
   },
   "license": "MIT"
 }
